--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="assets/image/logokeytogo.png" type="image/x-icon">
+  <link rel="stylesheet" href="style/style.css">
+  <title>Key To Go</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script bis_use="true" type="text/javascript" charset="utf-8" data-bis-config="[&quot;facebook.com/&quot;,&quot;twitter.com/&quot;,&quot;youtube-nocookie.com/embed/&quot;,&quot;//vk.com/&quot;,&quot;//www.vk.com/&quot;,&quot;linkedin.com/&quot;,&quot;//www.linkedin.com/&quot;,&quot;//instagram.com/&quot;,&quot;//www.instagram.com/&quot;,&quot;//www.google.com/recaptcha/api2/&quot;,&quot;//hangouts.google.com/webchat/&quot;,&quot;//www.google.com/calendar/&quot;,&quot;//www.google.com/maps/embed&quot;,&quot;spotify.com/&quot;,&quot;soundcloud.com/&quot;,&quot;//player.vimeo.com/&quot;,&quot;//disqus.com/&quot;,&quot;//tgwidget.com/&quot;,&quot;//js.driftt.com/&quot;,&quot;friends2follow.com&quot;,&quot;/widget&quot;,&quot;login&quot;,&quot;//video.bigmir.net/&quot;,&quot;blogger.com&quot;,&quot;//smartlock.google.com/&quot;,&quot;//keep.google.com/&quot;,&quot;/web.tolstoycomments.com/&quot;,&quot;moz-extension://&quot;,&quot;chrome-extension://&quot;,&quot;/auth/&quot;,&quot;//analytics.google.com/&quot;,&quot;adclarity.com&quot;,&quot;paddle.com/checkout&quot;,&quot;hcaptcha.com&quot;,&quot;recaptcha.net&quot;,&quot;2captcha.com&quot;,&quot;accounts.google.com&quot;,&quot;www.google.com/shopping/customerreviews&quot;,&quot;buy.tinypass.com&quot;,&quot;gstatic.com&quot;,&quot;secureir.ebaystatic.com&quot;,&quot;docs.google.com&quot;,&quot;contacts.google.com&quot;,&quot;github.com&quot;,&quot;mail.google.com&quot;,&quot;chat.google.com&quot;,&quot;audio.xpleer.com&quot;,&quot;keepa.com&quot;,&quot;static.xx.fbcdn.net&quot;,&quot;sas.selleramp.com&quot;,&quot;1plus1.video&quot;,&quot;console.googletagservices.com&quot;,&quot;//lnkd.demdex.net/&quot;,&quot;//radar.cedexis.com/&quot;,&quot;//li.protechts.net/&quot;,&quot;challenges.cloudflare.com/&quot;,&quot;ogs.google.com&quot;]" src="chrome-extension://eppiocemhmnlbhjplcgkofciiegomcon/executers/vi-tr.js"></script>
-
-
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Key To Go</title>
 </head>
 <body>
-    <header class="header">
-        <a href="index.html" class="logo"><span>Key To Go</span></a>
 
-        <div id="menu-btn" class="fas fa-bars"></div>
+  <header>
+    <div class="logo">Key To Go</div>
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <nav id="nav-menu">
+      <a href="#">Home</a>
+      <a href="#">Sobre</a>
+      <a href="#">Portfólio</a>
+      <a href="#">Contato</a>
+      <a href="#">Serviços</a>
+      <a href="#">Diário</a>
+    </nav>
+  </header>
 
-        <nav class="navbar">
-            <a href="#home">Início</a>
-            <a href="#features">Nossos Serviços</a>
-            <a href="#pricing">Preços</a>
-            <a href="#about">Contato</a>
-        </nav>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Construa e Projete Com Segurança.</h1>
+      <p>Obra segura, gestão precisa, entrega garantida.</p>
+    </div>
+    <div class="hero-image">
+        <img src="assets/image/reforma.png" alt="Descrição da imagem" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;">
+      </div>
 
-    </header>
+  </section>
 
-    <!--fim cabeçalho-->
+  <section class="carousel">
+    <h2>Nossos Serviços</h2>
+    <div id="carousel-container" class="carousel-container">
+      <div class="carousel-item"><img src="assets/image/cozinha2.png" alt="Imagem 1" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;"></div>
 
+      <div class="carousel-item"><img src="assets/image/quarto1.png" alt="Imagem 1" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;"></div>
 
-    <main>
-      <div class="carousel">
-        <div class="carousel-images">
-            <img src="assets/image/obra_canteiro.png" alt="Imagem 1">
-            <img src="assets/image/obra_canteiro5.png" alt="Imagem 2">
-            <img src="assets/image/obra_sala.png" alt="Imagem 3">
-            <img src="assets/image/Obras_sala4.png" alt="Imagem 4">
-        </div>
+      <div class="carousel-item"><img src="assets/image/sala1.png" alt="Imagem 1" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;"></div>
     </div>
 
-        <section id="home" class="home">
-            <div class="swiper home-slider">
+    <div class="dots">
+      <span class="dot active" onclick="moveToSlide(0)"></span>
+      <span class="dot" onclick="moveToSlide(1)"></span>
+      <span class="dot" onclick="moveToSlide(2)"></span>
+    </div>
+  </section>
 
-                <div class="swiper-wrapper">
+  <footer>
+    <div class="footer-section">
+      <h3>Informações</h3>
+      <p>Endereço</p>
+      <p>Telefone</p>
+      <p>Email</p>
+    </div>
+    <div class="footer-section">
+      <h3>Links úteis</h3>
+      <p>Política de Privacidade</p>
+      <p>Termos de Uso</p>
+      <p>Suporte</p>
+    </div>
+    <div class="footer-section">
+      <h3>Redes Sociais</h3>
+      <p>Facebook</p>
+      <p>Instagram</p>
+      <p>LinkedIn</p>
+    </div>
+  </footer>
 
-                    <div class="swiper-slide slide" style="background: url(img/home2.jpg) no-repeat;">
-                        <div class="content">
-                            <span>Gestão de Obras Completas</span>
-                            <h3>Construa e Projete com Segurança.</h3>
-                            <a href="#" class="btn">Iniciar</a>
-                        </div>
-                    </div>
-                <div class="swiper-pagination"></div>
-            </div>
-
-        </section>
-        
-    </main>
-
+  <script src="app.js"></script>
 
 </body>
 </html>
