--- a/index.html
+++ b/index.html
@@ -6,73 +6,77 @@
   <link rel="shortcut icon" href="assets/image/logokeytogo.png" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css">
   <title>Key To Go</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="keytogo-container">
+    <header>
+      <div class="logo">KEY TO GO</div>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+      <nav id="nav-menu">
+        <a href="#">Home</a>
+        <a href="#">Sobre</a>
+        <a href="#">Portfólio</a>
+        <a href="#">Contato</a>
+        <a href="#">Serviços</a>
+        <a href="#">Diário</a>
+      </nav>
+    </header>
 
-  <header>
-    <div class="logo">Key To Go</div>
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    <nav id="nav-menu">
-      <a href="#">Home</a>
-      <a href="#">Sobre</a>
-      <a href="#">Portfólio</a>
-      <a href="#">Contato</a>
-      <a href="#">Serviços</a>
-      <a href="#">Diário</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Construa e Projete Com Segurança.</h1>
-      <p>Obra segura, gestão precisa, entrega garantida.</p>
+    <div class="hero-wrapper">
+      <section class="hero">
+        <div class="hero-text">
+          <h1>Construa e Projete Com Segurança.</h1>
+          <p>Obra segura, gestão precisa, entrega garantida.</p>
+        </div>
+        <div class="hero-image">
+          <img src="assets/image/reforma.png" alt="Descrição da imagem">
+        </div>
+      </section>
     </div>
-    <div class="hero-image">
-        <img src="assets/image/reforma.png" alt="Descrição da imagem" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;">
+    
+
+<section class="carousel">
+      <h2>Nossos Serviços</h2>
+      <div class="carousel-container">
+        <div class="carousel-track">
+          <div class="carousel-item"><img src="assets/image/cozinha2.png" alt="Imagem 1"></div>
+          <div class="carousel-item"><img src="assets/image/quarto1.png" alt="Imagem 2"></div>
+          <div class="carousel-item"><img src="assets/image/sala1.png" alt="Imagem 3"></div>
+        </div>
       </div>
+      <div class="dots">
+        <span class="dot active" onclick="moveToSlide(0)"></span>
+        <span class="dot" onclick="moveToSlide(1)"></span>
+        <span class="dot" onclick="moveToSlide(2)"></span>
+      </div>
+    </section>
+    
 
-  </section>
-
-  <section class="carousel">
-    <h2>Nossos Serviços</h2>
-    <div id="carousel-container" class="carousel-container">
-      <div class="carousel-item"><img src="assets/image/cozinha2.png" alt="Imagem 1" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;"></div>
-
-      <div class="carousel-item"><img src="assets/image/quarto1.png" alt="Imagem 1" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;"></div>
-
-      <div class="carousel-item"><img src="assets/image/sala1.png" alt="Imagem 1" style="width:100%; height:100%; object-fit:cover; border-radius: 15px;"></div>
-    </div>
-
-    <div class="dots">
-      <span class="dot active" onclick="moveToSlide(0)"></span>
-      <span class="dot" onclick="moveToSlide(1)"></span>
-      <span class="dot" onclick="moveToSlide(2)"></span>
-    </div>
-  </section>
-
-  <footer>
-    <div class="footer-section">
-      <h3>Informações</h3>
-      <p>Endereço</p>
-      <p>Telefone</p>
-      <p>Email</p>
-    </div>
-    <div class="footer-section">
-      <h3>Links úteis</h3>
-      <p>Política de Privacidade</p>
-      <p>Termos de Uso</p>
-      <p>Suporte</p>
-    </div>
-    <div class="footer-section">
-      <h3>Redes Sociais</h3>
-      <p>Facebook</p>
-      <p>Instagram</p>
-      <p>LinkedIn</p>
-    </div>
-  </footer>
+    <footer>
+      <div class="footer-section">
+        <h3>Informações</h3>
+        <p>Endereço</p>
+        <p>Telefone</p>
+        <p>Email</p>
+      </div>
+      <div class="footer-section">
+        <h3>Links úteis</h3>
+        <p>Política de Privacidade</p>
+        <p>Termos de Uso</p>
+        <p>Suporte</p>
+      </div>
+      <div class="footer-section">
+        <h3>Redes Sociais</h3>
+        <p>Facebook</p>
+        <p>Instagram</p>
+        <p>LinkedIn</p>
+      </div>
+    </footer>
+  </div>
 
   <script src="app.js"></script>
-
 </body>
 </html>
