--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("IRTkKtAAwJi9o-y5x");
+    })();
+  </script>
 </head>
 
 <body>
@@ -45,14 +51,16 @@
       <h2>Formas de Contato</h2>
       <div class="contact_container">
         <div class="contact_form">
-          <form method="post" action="app.js depois vejo">
+          <form method="post">
             <div>
               <label for="nome">Nome: </label>
               <input type="text" id="nome" name="nome" required />
+              <small> * Obrigatório</small>
             </div>
             <div>
               <label for="telefone">Telefone: </label>
               <input type="tel" id="telefone" name="telefone" required />
+              <small> * Obrigatório</small>
             </div>
             <div>
               <label for="email">Email: </label>
@@ -62,6 +70,7 @@
             <div>
               <label for="mensagem">Mensagem: </label>
               <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+              <small> * Obrigatório</small>
             </div>
             <div>
               <label for="anexo">Anexo (Plantas):</label>
