--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="assets/image/logokeytogo.png" type="image/x-icon">
-  <link rel="stylesheet" href="style/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="assets/image/logokeytogo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style/style.css" />
   <title>Key To Go</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
 </head>
+
 <body>
   <div class="keytogo-container">
     <header>
@@ -19,7 +23,7 @@
         <a href="#">Home</a>
         <a href="#">Sobre</a>
         <a href="#">Portfólio</a>
-        <a href="#">Contato</a>
+        <a href="contato.html">Contato</a>
         <a href="#">Serviços</a>
         <a href="#">Diário</a>
       </nav>
@@ -32,19 +36,24 @@
           <p>Obra segura, gestão precisa, entrega garantida.</p>
         </div>
         <div class="hero-image">
-          <img src="assets/image/reforma.png" alt="Descrição da imagem">
+          <img src="assets/image/reforma.png" alt="Descrição da imagem" />
         </div>
       </section>
     </div>
-    
 
-<section class="carousel">
+    <section class="carousel">
       <h2>Nossos Serviços</h2>
       <div class="carousel-container">
         <div class="carousel-track">
-          <div class="carousel-item"><img src="assets/image/cozinha2.png" alt="Imagem 1"></div>
-          <div class="carousel-item"><img src="assets/image/quarto1.png" alt="Imagem 2"></div>
-          <div class="carousel-item"><img src="assets/image/sala1.png" alt="Imagem 3"></div>
+          <div class="carousel-item">
+            <img src="assets/image/cozinha2.png" alt="Imagem 1" />
+          </div>
+          <div class="carousel-item">
+            <img src="assets/image/quarto1.png" alt="Imagem 2" />
+          </div>
+          <div class="carousel-item">
+            <img src="assets/image/sala1.png" alt="Imagem 3" />
+          </div>
         </div>
       </div>
       <div class="dots">
@@ -53,7 +62,6 @@
         <span class="dot" onclick="moveToSlide(2)"></span>
       </div>
     </section>
-    
 
     <footer>
       <div class="footer-section">
@@ -79,4 +87,5 @@
 
   <script src="app.js"></script>
 </body>
+
 </html>
