troca de fundo tela de contato

--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="contato_container">
     <div class="keytogo-container">
       <header>
         <div class="logo">KEY TO GO</div>
@@ -47,9 +47,6 @@
           <div class="hero-text">
             <h1>Sua mensagem é o primeiro passo. Conte-nos o que precisa.</h1>
             <p>Obra segura, gestão precisa, entrega garantida.</p>
-          </div>
-          <div class="hero-image">
-            <img src="assets/image/reforma.png" alt="Descrição da imagem" />
           </div>
         </section>
       </div>
