--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <nav id="nav-menu">
         <a href="#">Home</a>
-        <a href="#">Sobre</a>
+        <a href="sobre.html">Sobre</a>
         <a href="#">Portfólio</a>
         <a href="contato.html">Contato</a>
         <a href="#">Serviços</a>
