--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav id="nav-menu">
         <a href="#">Home</a>
         <a href="sobre.html">Sobre</a>
-        <a href="#">Portfólio</a>
+        <a href="portfolio.html">Portfólio</a>
         <a href="contato.html">Contato</a>
         <a href="#">Serviços</a>
         <a href="#">Diário</a>
