criação da página sobre

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>Obra segura, gestão precisa, entrega garantida.</p>
         </div>
         <div class="hero-image">
-          <img src="assets/image/reforma.png" alt="Descrição da imagem" />
+          <img src="assets/image/sala1.png" alt="Descrição da imagem" />
         </div>
       </section>
     </div>
