--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <div class="logo">KEY TO GO</div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <nav id="nav-menu">
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="sobre.html">Sobre</a>
         <a href="portfolio.html">Portfólio</a>
         <a href="contato.html">Contato</a>
-        <a href="#">Serviços</a>
-        <a href="#">Diário</a>
+        <a href=">Serviços</a>
+        <a href="diario.html">Diário</a>
       </nav>
     </header>
 
