--- a/diario.html
+++ b/diario.html
@@ -28,10 +28,9 @@
       <nav id="nav-menu">
         <a href="index.html">Home</a>
         <a href="sobre.html">Sobre</a>
-        <a href="#">Portfólio</a>
+        <a href="portfolio.html">Portfólio</a>
         <a href="contato.html">Contato</a>
-        <a href="#">Serviços</a>
-        <a href="#">Diário</a>
+        <a href="diario.html">Diário</a>
       </nav>
     </header>
 
