--- a/contato.html
+++ b/contato.html
@@ -18,11 +18,13 @@
     />
     <script
       type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
     ></script>
     <script type="text/javascript">
       (function () {
-        emailjs.init("IRTkKtAAwJi9o-y5x");
+        emailjs.init({
+          publicKey: "IRTkKtAAwJi9o-y5x",
+        });
       })();
     </script>
   </head>
@@ -34,11 +36,10 @@
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="nav-menu">
           <a href="index.html">Home</a>
-          <a href="#">Sobre</a>
-          <a href="#">Portfólio</a>
-          <a href="#">Contato</a>
-          <a href="#">Serviços</a>
-          <a href="#">Diário</a>
+          <a href="sobre.html">Sobre</a>
+          <a href="portfolio.html">Portfólio</a>
+          <a href="contato.html">Contato</a>
+          <a href="diario.html">Diário</a>
         </nav>
       </header>
 
@@ -63,7 +64,7 @@
             >
           </div>
           <div class="contact_form">
-            <form method="post">
+            <form id="contact_form" method="post">
               <div>
                 <label for="nome">Nome: </label>
                 <input type="text" id="nome" name="nome" required />
