--- a/sobre.html
+++ b/sobre.html
@@ -123,11 +123,10 @@
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <nav id="nav-menu">
         <a href="index.html">Home</a>
-        <a href="#">Sobre</a>
-        <a href="#">Portfólio</a>
-        <a href="#">Contato</a>
-        <a href="#">Serviços</a>
-        <a href="#">Diário</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="portfolio.html">Portfólio</a>
+        <a href="contato.html">Contato</a>
+        <a href="diario.html">Diário</a>
       </nav>
     </header>
 
