--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,33 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      // https://dashboard.emailjs.com/admin/account
+      emailjs.init({
+        publicKey: "Tgo8Pm5fDkJxrbGid",
+      });
+    })();
+  </script>
+  <script type="text/javascript">
+    window.onload = function () {
+      document
+        .getElementById("contact-form")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          // these IDs from the previous steps
+          emailjs.sendForm("service_ibi01gb", "template_50bp81i", this).then(
+            () => {
+              console.log("SUCCESS!");
+            },
+            (error) => {
+              console.log("FAILED...", error);
+            },
+          );
+        });
+    };
+  </script>
 </head>
 
 <body class="contato_container">
@@ -45,7 +72,7 @@
             Fale conosco pelo WhatsApp</a>
         </div>
         <div class="contact_form">
-          <form id="contact_form" method="post">
+          <form id="contact-form">
             <div>
               <label for="nome">Nome: </label>
               <input type="text" id="nome" name="nome" required />
@@ -72,7 +99,7 @@
             <!--   <small>Formatos aceitos: DWG, PDF, IFC, Revit (RVT), ArchiCAD (PLN), -->
             <!--     MicroStation (DGN), SketchUp (SKP)</small> -->
             <!-- </div> -->
-            <button type="submit">Enviar</button>
+            <button type="submit" value="enviar_formulario">Enviar</button>
           </form>
         </div>
       </div>
