alteração nas páginas

--- a/diario.html
+++ b/diario.html
@@ -17,6 +17,10 @@
       display: flex;
       justify-content: center;
     }
+
+    .textdiario {
+      width: 600px;
+    }
   </style>
 </head>
 
@@ -26,21 +30,21 @@
       <div class="logo">KEY TO GO</div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <nav id="nav-menu">
-        <a href="index.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="#">Portfólio</a>
-        <a href="contato.html">Contato</a>
-        <a href="#">Serviços</a>
-        <a href="#">Diário</a>
+        <a href="index.html" target="_self" rel="external">Home</a>
+        <a href="sobre.html" target="_self" rel="external">Sobre</a>
+        <a href="portfolio.html" target="_self" rel="external">Portfólio</a>
+        <a href="contato.html" target="_self" rel="external">Contato</a>
+        <a href="diario.html" target="_self" rel="external">Diário</a>
       </nav>
     </header>
 
     <div class="hero-wrapper">
       <section class="hero">
         <div class="hero-text">
-          <h1>
-            Fique por dentro das <br />
-            últimas novidades.
+          <h1 class="textdiario">
+            Fique por dentro das últimas novidades
+          <h1 class="textdiario">
+            Nos sigam em nossas redes Sociais 
           </h1>
         </div>
         <div class="hero-image">
