--- a/contato.html
+++ b/contato.html
@@ -33,20 +33,19 @@
         <div class="logo">KEY TO GO</div>
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="nav-menu">
-          <a href="index.html">Home</a>
-          <a href="#">Sobre</a>
-          <a href="#">Portfólio</a>
-          <a href="#">Contato</a>
-          <a href="#">Serviços</a>
-          <a href="#">Diário</a>
+          <a href="index.html" target="_self" rel="external">Home</a>
+          <a href="sobre.html" target="_self" rel="external">Sobre</a>
+          <a href="portfolio.html" target="_self" rel="external">Portfólio</a>
+          <a href="contato.html" target="_self" rel="external">Contato</a>
+          <a href="diario.html" target="_self" rel="external">Diário</a>
         </nav>
       </header>
 
       <div class="hero-wrapper">
         <section class="hero">
           <div class="hero-text">
-            <h1>Sua mensagem é o primeiro passo. Conte-nos o que precisa.</h1>
-            <p>Obra segura, gestão precisa, entrega garantida.</p>
+            <h1>Sua mensagem é o primeiro passo . Conte-nos o que precisa .</h1>
+            <p>Entre em contato com nosssa equipe.</p>
           </div>
         </section>
       </div>
