--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
       <div class="logo">KEY TO GO</div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <nav id="nav-menu">
-        <a href="#">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="portfolio.html">Portfólio</a>
-        <a href="contato.html">Contato</a>
-        <a href="#">Serviços</a>
-        <a href="#">Diário</a>
+        <a href="index.html" target="_self" rel="external">Home</a>
+        <a href="sobre.html" target="_self" rel="external">Sobre</a>
+        <a href="portfolio.html" target="_self" rel="external">Portfólio</a>
+        <a href="contato.html" target="_self" rel="external">Contato</a>
+        <a href="diario.html" target="_self" rel="external">Diário</a>
       </nav>
     </header>
 
@@ -33,7 +32,7 @@
       <section class="hero">
         <div class="hero-text">
           <h1>Construa e Projete Com Segurança.</h1>
-          <p>Obra segura, gestão precisa, entrega garantida.</p>
+          <p>Obra segura e sem dor de cabeça, gestão precisa, entrega garantida.</p>
         </div>
         <div class="hero-image">
           <img src="assets/image/sala1.png" alt="Descrição da imagem" />
