--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,11 @@
         <div class="logo">KEY TO GO</div>
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="nav-menu">
-          <a href="index.html">Home</a>
-          <a href="#">Sobre</a>
-          <a href="#">Portfólio</a>
-          <a href="#">Contato</a>
-          <a href="#">Serviços</a>
-          <a href="#">Diário</a>
+          <a href="index.html" target="_self" rel="external">Home</a>
+          <a href="sobre.html" target="_self" rel="external">Sobre</a>
+          <a href="portfolio.html" target="_self" rel="external">Portfólio</a>
+          <a href="contato.html" target="_self" rel="external">Contato</a>
+          <a href="diario.html" target="_self" rel="external">Diário</a>
         </nav>
       </header>
 
