--- a/sobre.html
+++ b/sobre.html
@@ -108,6 +108,10 @@
         gap: 20px;
       }
 
+      nav a {
+        color: black;
+      }
+
       section {
         padding: 40px 15px;
       }
@@ -205,7 +209,7 @@
       </footer>
 
       <script src="app.js"></script>
-      
+
     </body>
 
 </html>
