--- a/diario.html
+++ b/diario.html
@@ -66,7 +66,9 @@
       <div class="footer-section">
         <h3>Redes Sociais</h3>
         <p>Facebook</p>
-        <p>Instagram</p>
+        <a href="https://www.instagram.com/key_to_go_gestao_de_obra_/" taget="_blank">
+          <p>Instagram</p>
+        </a>
         <p>LinkedIn</p>
       </div>
     </footer>
