--- a/contato.html
+++ b/contato.html
@@ -69,6 +69,10 @@
         flex-grow: 1;
         min-width: 90%;
       }
+
+      .hero-wrapper {
+        max-height: 500px;
+      }
     }
   </style>
 </head>
